add file setting configuration from file
